feat: add store database config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,4 @@ spring:
       server:
         git:
           uri: https://github.com/wagnertrindades/microservice-config-repo
-          search-paths: provider
+          search-paths: provider, store
